--- a/html/bookings.html
+++ b/html/bookings.html
@@ -9,8 +9,8 @@
     <title>My Booking</title>
 
     <link rel="stylesheet" href="../css/bookings.css">
-    <link rel="stylesheet" href="../css/headerstyle.css">
-    <link rel="stylesheet" href="../css/main-footer.css">
+    <!-- <link rel="stylesheet" href="../css/headerstyle.css"> -->
+    <!-- <link rel="stylesheet" href="../css/main-footer.css"> -->
 
     <script type="module" src="../javascript/utilities.js" defer></script>
     <script type="module" src="../javascript/booking.js" defer></script>
@@ -18,20 +18,46 @@
 
 <body>
     <header>
-        
+
+        <div class="headerContent">
+            <div class="site-heading">
+                <img src="../src/Untitled-9.png" alt="logo">
+                <h1>artist alley</h1>
+            </div>
+
+            <div class="navbar">
+                <nav>
+                    <ul>
+                        <li><a href="Home">Home</a></li>
+                        <li><a href="About Us">About us</a></li>
+                        <li><a href="">Book an artist</a></li>
+                        <li><a href="">Join our artist</a></li>
+                        <li class="login-btn"><a href="">Login</a></li>
+                    </ul>
+                </nav>
+                <div class="search"><a href="">Search <i class="fa-solid fa-magnifying-glass"></i></a></div>
+                <div class="menuBtn">
+                    <a href="#"><i class="fa-solid fa-bars"></i></a>
+                </div>
+            </div>
+
+            <h2>My Bookings</h2>
+
+        </div>
+
     </header>
     <main>
         <div class="container">
             <!-- booking content -->
             <div class="booking-content-wrapper">
                 <div class="pending-view">
-                    <h2>Request Pending:</h2>
+                    <h3>Request Pending:</h3>
                     <div id="bookings-pending">
                         <!-- Booking items will be dynamically added here -->
                     </div>
                 </div>
                 <div class="aceepted-view">
-                    <h2>My Bookings:</h2>
+                    <h3>My Bookings:</h3>
                     <div id="bookings-accepted">
                         <!-- Booking items will be dynamically added here -->
                     </div>
@@ -41,8 +67,49 @@
     </main>
 
     <footer>
+        <div class="footerContent">
+
+            <div class="footer-head">
+                <img src="../src/logo2.png" alt="">
+                <p>Your source for artistic excellence, delivering creativity and talent for every occasion.</p>
+                <div class="icons">
+                    <ul>
+                        <li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
+                        <li><a href="#"><i class="fa-brands fa-x-twitter"></i></a></li>
+                        <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
+                        <li><a href="#"><i class="fa-brands fa-pinterest"></i></a></li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="quick-links">
+                <p>Quick links</p>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About us</a></li>
+                    <li><a href="#">Book an artist</a></li>
+                    <li><a href="#">Join our artist</a></li>
+                </ul>
+            </div>
+
+            <div class="contact-us">
+                <p>Contact us</p>
+                <ul>
+                    <li><a href="#">1-800-123-4567</a></li>
+                    <li><a href="#">info@artistalley.com</a></li>
+                    <li><a href="#">4878, Main street, Vancouver, BC, V52TP</a></li>
+                </ul>
+            </div>
+
+            <div class="copyright">
+                <p>&copy; 2024 Artist Alley. All rights reserved. | privacy Policy | Terms of Service</p>
+            </div>
+
+        </div>
 
     </footer>
+
+
 </body>
 
 </html>
