--- a/html/login.html
+++ b/html/login.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Login</title>
     <link rel="stylesheet" href="../css/login.css">
     <link rel="stylesheet" href="../css/variables.css">
     <script type="module" src="../javascript/login.js" defer></script>
@@ -44,19 +44,23 @@
         <div class="login-wrapper">
             <div class="logo">
                 <!-- <img src="../src/logo2.png" alt=""> -->
-                <h1> Login to your account</h1>
+                <h3> Login to your account</h3>
             </div>
             <div class="login-form">
-                <label class="label" for="email">Email</label>
-                <input type="email" id="email" class="inputField" required>
+                <div class="labels">
+                    <!-- <label class="label" for="email">Email</label> -->
+                    <input type="email" id="email" class="inputField" placeholder="Email" required>
+                </div>
 
-                <label class="label" for="password"> Password</label>
-                <input type="password" id="password" class="inputField" required>
+                <div class="labels">
+                    <!-- <label class="label" for="password"> Password</label> -->
+                    <input type="password" id="password" class="inputField" placeholder="Password" required>
+                </div>
 
                 <div class="buttons">
-                    <input id="loginBtn" type="button" value="LogIn">
-                    <span id="or">OR</span>
-                    <input id="signupBtn" type="button" value="Sign Up">
+                    <input id="loginBtn" type="button" value="Log in">
+                    <span id="or">or</span>
+                    <input id="signupBtn" type="button" value="Sign up">
                 </div>
 
             </div>
